Use gap instead of margin to avoid collapsing

--- a/src/app.scss
+++ b/src/app.scss
@@ -21,11 +21,13 @@ body {
   width: 320px;
   padding: 16px 16px 40px 16px;
   background-color: white;
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
 
   img {
     width: 100%;
     border-radius: 10px;
-    margin-bottom: 24px;
   }
 }
 
@@ -33,18 +35,22 @@ body {
   font-family: Outfit;
   text-align: center;
   padding: 0 16px;
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
 
   p:first-child {
     font-weight: bold;
     font-size: 22px;
-    line-height: 1.2;
+    line-height: 120%;
     color: hsl(218, 44%, 22%);
-    margin-bottom: 16px;
+    letter-spacing: 0;
   }
 
   p:last-child {
     font-size: 15px;
-    line-height: 1.4;
+    line-height: 140%;
     color: hsl(216, 15%, 48%);
+    letter-spacing: 0.2px;
   }
 }
